<resources>
    <string name="app_name">WeatherOrNot Alarm</string>
    <string name="title_activity_alarm_settings">Alarm Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Units -->
    <string name="degree_c">\u00B0C</string>
    <string name="degree_f">\u00B0F</string>
    <string name="mph">mph</string>
    <string name="km">km/h</string>

    <!-- Criteria labels -->
    <string name="any">Any</string>
    <string name="conditions">Conditions</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="clear">Clear</string>
    <string name="cloud">Cloudy</string>
    <string name="rain">Raining</string>
    <string name="snow">Snowing</string>
    <string name="temp_above">Above</string>
    <string name="temp_below">Below</string>
    <string name="wind_above">Above</string>
    <string name="wind_below">Below</string>

    <!-- Labels -->
    <string name="no_default">No Default Alarm</string>
    <string name="no_weather">No Weather Alarm</string>
    <string name="none">None</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="weather_criteria_icon">Weather Criteria Icon</string>
    <string name="cloudy">Cloudy</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="choose_wind_criteria">Choose Wind Criteria:</string>
    <string name="new_alarm">New Alarm</string>
    <string name="_8_30_am">8:30 am</string>
    <string name="weekdays">M, TU, W, TH, FR, SA, SU</string>
    <string name="choose_temperature_threshold">Choose Temperature Threshold:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_general_conditions">Choose General Conditions:</string>
    <string name="no_default_alarm">No Default Alarm</string>
    <string name="don_t_repeat">Don\'t Repeat</string>
    <string name="repeat_alarm_every">Repeat Alarm Every:</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="general_conditions">General Conditions</string>
    <string name="default_alarm_time">Default Alarm Time</string>
    <string name="repeat">Repeat</string>
    <string name="su"> SU </string>
    <string name="m"> M </string>
    <string name="w"> W </string>
    <string name="th"> TH </string>
    <string name="f"> F </string>
    <string name="sa"> SA </string>
    <string name="tone">Tone</string>
    <string name="weatheralarm_time">WeatherAlarm Time</string>
    <string name="weatheralarm_criteria">WeatherAlarm Criteria</string>
    <string name="set">Set</string>
    <string name="stop">Stop</string>
    <string name="swipe_to_snooze">\u003C\u003C  Swipe to Snooze  \u003E\u003E</string>
    <string name="no_weatheralarm">No WeatherAlarm</string>
    <string name="default_title">Default</string>
    <string name="tu">TU</string>
    <string name="endpt">http://ec2-52-40-189-126.us-west-2.compute.amazonaws.com/weatherornot</string>
    <string name="default_alarm_ring_label">Default Alarm</string>

    <string name="dark_sky_credit_url">https://darksky.net/poweredby/</string>
    <string name="launcher_icon_credit_url">https://www.flaticon.com/authors/dinosoftlabs</string>
    <string name="weather_icon_credit_url">https://www.flaticon.com/authors/pixel-perfect</string>
</resources>
